# ORM-Abstract

./: .gitignore  CMakeLists.txt  Makefile  ORM.hpp.in  README.md
.github/workflows/: codeql-analysis.yml  compilation.yaml
example/: ORM.cpp  main.cpp
example/users/: users.hpp
lib/ORM/: ORM-version.hpp  ORM.cpp
lib/ORM/database/: init.hpp
lib/ORM/database/MockSQL/: MockSQL.hpp
lib/ORM/database/MySQL/: mysql.hpp
lib/ORM/dialects/: init.hpp
lib/orm/: CMakeLists.txt  mockdb.hpp  mysql.hpp  orm.hpp
lib/orm/column/: init.hpp  uid.hpp
lib/orm/connections/: init.hpp
lib/orm/database/: init.hpp
lib/orm/database/MockSQL/: MockSQL.hpp  MockSQL_impl.hpp
lib/orm/database/MySQL/: mysql.hpp
lib/orm/database/permissions/: init.hpp
lib/orm/dialects/: init.hpp
lib/orm/query/: init.hpp
lib/orm/result/: init.hpp
lib/orm/table/: init.hpp
tests/ORM/: CMakeLists.txt  main.cpp
tests/lib/moka/src/: test.h
